# hex_device_test

./: .gitignore  README.md  pyproject.toml
docs/: Q&A.md
logs/: arm_0_20260414_233257.csv
src/hex_device_test.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/hex_device_test/controllers/: ArmController.py  ArmControllerProcess.py  BaseController.py  ErrorChecker.py  TrajectoryController.py  arm_state_machine_process.py  messages.py
src/hex_device_test/managers/: BaseCoordinator.py  Coordinator.py  CoordinatorProcess.py  config_base.py  message_bus.py
src/hex_device_test/statuses/: ArmProcessCommunication.py  ArmProcessIPC.py  ArmStatus.py  SharedMemory.py
src/hex_device_test/test/: arm_test.py  readme.md
src/hex_device_test/tools/: CsvLogger.py  plotjuggle.py
src/hex_device_testDemo.egg-info/: PKG-INFO  SOURCES.txt
test/: arm_test.py
