[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hex_device_test"
version = "1.0.0"
requires-python = ">=3.9"
dependencies = [
    "hex_device",
]
description = "HEX device control test"
authors = [{name="TTG"}]
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]
include = ["hex_device_test*"]
exclude = ["tests*", "test*", "*.tests"]